@@ -73,6 +73,7 @@
 #define AP_MPM_WANT_SET_SCOREBOARD
 #define AP_MPM_WANT_SET_MAX_REQUESTS
 #define AP_MPM_WANT_SET_COREDUMPDIR
+#define AP_MPM_WANT_SET_MAX_MEM_FREE
 
 extern int ap_max_child_assigned;
 extern server_rec *ap_server_conf;
