@@ -821,6 +821,7 @@ static void *worker_thread(apr_thread_t *thd, void * dummy)
     free(ti);
 
     apr_allocator_create(&allocator);
+    apr_allocator_max_free_set(allocator, ap_max_mem_free);
     apr_pool_create_ex(&ptrans, NULL, NULL, allocator);
     apr_allocator_owner_set(allocator, ptrans);
     bucket_alloc = apr_bucket_alloc_create(tpool);
