@@ -72,6 +72,7 @@
   #define AP_MPM_WANT_SET_LOCKFILE 
 */
 #define AP_MPM_WANT_SET_MAX_REQUESTS
+#define AP_MPM_WANT_SET_MAX_MEM_FREE
 #define AP_MPM_DISABLE_NAGLE_ACCEPTED_SOCK
 /*#define AP_MPM_WANT_SET_COREDUMPDIR
   #define AP_MPM_WANT_SET_ACCEPT_LOCK_MECH 
